@@ -14,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -29,7 +29,7 @@ public class ConvertList2ArrayTest {
     public void when2ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2),
+                List.of(1, 2),
                 9
         );
         int[][] expect = {
@@ -42,7 +42,7 @@ public class ConvertList2ArrayTest {
     public void when6ElementsThen2() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6),
+                List.of(1, 2, 3, 4, 5, 6),
                 2
         );
         int[][] expect = {
@@ -58,12 +58,19 @@ public class ConvertList2ArrayTest {
         List<Integer> expected = new ArrayList<>();
         // Case #1
         expected.addAll(Arrays.asList(1, 2, 3, 4, 5, 6));
-        List<Integer> out = list.convert(Arrays.asList(new int[]{1, 2}, new int[]{3, 4, 5, 6}));
+        List<Integer> out = list.convert(List.of(
+                new int[]{1, 2},
+                new int[]{3, 4, 5, 6}));
         assertThat(out, is(expected));
         expected.clear();
         // Case #2
-        expected.addAll(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
-        out = list.convert(Arrays.asList(new int[]{}, new int[]{1, 2, 3, 4, 5, 6}, new int[]{7}, new int[]{8, 9}));
+        expected.addAll(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9));
+        out = list.convert(List.of(
+                new int[]{},
+                new int[]{1, 2, 3, 4, 5, 6},
+                new int[]{7},
+                new int[]{8, 9}
+                ));
         assertThat(out, is(expected));
     }
 }
